# optibrain_

./: .gitignore  README.md  create_uvenv  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  pytest.yml
examples/: classification.ipynb  regression.ipynb
optibrain/: __init__.py
optibrain/base/: base.py
optibrain/utils/: NN_model.py  engine.py  kriging_model.py  project.py  utils.py
src/optibrain/base/: base.py
src/optibrain/utils/: NN_model.py  checker.py  engine.py  kriging_model.py  project.py  utils.py
test/: requirements_test.txt  test_base.py
